# shipwright-64

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  PLAN.md  README.md  build_web.sh  copy-existing-otrs.cmake  index.html  run-clang-format.ps1  run-clang-format.sh  serve_o2r.sh  serve_web.py  shadertoy.json  soh.js  ssgi_bufA.glsl  ssgi_common.glsl  ssgi_image.glsl
OTRExporter/OTRExporter/: AnimationExporter.cpp  ArrayExporter.cpp  AudioExporter.cpp  AudioExporter.h  BlobExporter.cpp  CKeyFrameExporter.cpp  CKeyFrameExporter.h  CMakeLists.txt  CutsceneExporter.cpp  DisplayListExporter.cpp  Exporter.h  ExporterArchive.cpp  ExporterArchive.h  ExporterArchiveO2R.cpp  ExporterArchiveOTR.cpp  ExporterArchiveOTR.h  Main.cpp  Main.h  MtxExporter.cpp  RoomExporter.cpp  TextMMExporter.cpp  TextMMExporter.h  TextureAnimationExporter.cpp  TextureAnimationExporter.h  TextureExporter.cpp  VersionInfo.cpp  VersionInfo.h  VtxExporter.cpp
ZAPDTR/ZAPD/: CMakeLists.txt  CrashHandler.cpp  Declaration.cpp  Declaration.h  ExecutableMain.cpp  ExporterSet.h  FileWorker.h  GameConfig.cpp  Globals.cpp  Globals.h  ImageBackend.cpp  Main.cpp  OutputFormatter.h  ZAnimation.cpp  ZAnimation.h  ZArray.cpp  ZAudio.cpp  ZAudio.h  ZAudioDecode.cpp  ZBackground.cpp  ZCKeyFrame.cpp  ZCKeyFrameAnim.cpp  ZCollision.cpp  ZCutscene.cpp  ZDisplayList.cpp  ZDisplayList.h  ZFile.cpp  ZFile.h  ZLimb.cpp  ZLimb.h  ZMtx.cpp  ZPath.cpp  ZPlayerAnimationData.cpp  ZPointer.cpp  ZResource.cpp  ZResource.h  ZRom.cpp  ZSkeleton.cpp  ZSkeleton.h  ZText.cpp  (+6 more)
ZAPDTR/ZAPD/OtherStructs/: CutsceneMM_Commands.cpp  CutsceneOoT_Commands.cpp  SkinLimbStructs.cpp  SkinLimbStructs.h
ZAPDTR/ZAPD/ZRoom/: ZRoom.cpp  ZRoomCommand.h
ZAPDTR/ZAPD/ZRoom/Commands/: SetAlternateHeaders.cpp  SetAnimatedMaterialList.h  SetCsCamera.cpp  SetCutsceneEntryList.cpp  SetCutsceneEntryList.h  SetCutscenes.cpp  SetCutscenes.h  SetEntranceList.cpp  SetExitList.cpp  SetLightingSettings.cpp  SetMesh.cpp  SetMinimapChests.h  SetMinimapList.cpp  SetMinimapList.h  SetPathways.cpp  SetPathways.h
ZAPDTR/ZAPD/yaz0/: yaz0.cpp  yaz0.h
libultraship/src/: CMakeLists.txt
libultraship/src/fast/: Fast3dWindow.cpp  interpreter.cpp
libultraship/src/fast/backends/: gfx_direct3d11.cpp  gfx_metal.cpp  gfx_metal_shader.cpp  gfx_opengl.cpp  gfx_sdl2.cpp
libultraship/src/ship/: Context.cpp
libultraship/src/ship/resource/: ResourceManager.cpp
soh/: CMakeLists.txt  Resource.rc
soh/assets/: soh_assets.h
soh/assets/custom/presets/: Enhancements - Curated First Time Vanilla.json  Enhancements - Curated Randomizer.json  Enhancements - Curated Returning Vanilla.json  Enhancements - Reset to Default.json  Rando Seed Settings - Advanced.json  Rando Seed Settings - Beginner.json  Rando Seed Settings - Hell Mode.json  Rando Seed Settings - Reset to Default.json  Rando Seed Settings - Standard.json
soh/assets/extractor/: Config_GC_MQ_D.xml  Config_GC_MQ_NTSC_J.xml  Config_GC_MQ_NTSC_U.xml  Config_GC_MQ_PAL_F.xml  Config_GC_NMQ_D.xml  Config_GC_NMQ_NTSC_J.xml  Config_GC_NMQ_NTSC_J_CE.xml  Config_GC_NMQ_NTSC_U.xml  Config_GC_NMQ_PAL_F.xml  Config_N64_NTSC_10.xml  Config_N64_NTSC_11.xml  Config_N64_NTSC_12.xml  Config_N64_PAL_10.xml  Config_N64_PAL_11.xml
soh/assets/objects/object_custom_equip/: object_custom_equip.h
soh/include/: functions.h  macros.h  sequence.h  variables.h  z64.h  z64actor.h  z64animation.h  z64audio.h  z64item.h  z64player.h  z64save.h
soh/soh/: CrashHandlerExt.cpp  GbiWrap.cpp  OTRGlobals.cpp  OTRGlobals.h  ResourceManagerHelpers.cpp  ResourceManagerHelpers.h  SaveManager.cpp  SaveManager.h  ShipInit.hpp  ShipUtils.cpp  ShipUtils.h  cvar_prefixes.h  frame_interpolation.cpp  frame_interpolation.h  mixer.c  mixer.h  stubs.c  util.cpp  util.h  z_message_OTR.cpp  z_play_otr.cpp  z_scene_otr.cpp
soh/soh/Enhancements/: ArrowCycle.cpp  AssignableTunicsAndBoots.cpp  DisableJabuWobble.cpp  DisableKokiriDrawDistance.cpp  DisableSandstorm.cpp  ExtraTraps.cpp  FileSelectEnhancements.cpp  FileSelectEnhancements.h  InjectItemCounts.cpp  ItemUnequip.cpp  NoSkulltulaFreeze.cpp  RebottleBlueFire.cpp  RemoteBombchu.cpp  ResetHotKey.cpp  SkipAmyPuzzle.cpp  UnsheatheWithoutSlashing.cpp  Warping.cpp  bootcommands.c  bootcommands.h  customequipment.cpp  debugconsole.cpp  enemyrandomizer.cpp  enemyrandomizer.h  enhancementTypes.h  gameplaystats.cpp  gameplaystats.h  gameplaystatswindow.h  kaleido.cpp  kaleido.h  mod_menu.cpp  mod_menu.h  mods.cpp  mods.h  nametag.cpp  nametag.h  savestates.cpp  timesaver_hook_handlers.cpp
soh/soh/Enhancements/Cheats/: GSTargetable.cpp  (+2 more)
soh/soh/Extractor/: Extract.cpp  Extract.h
soh/soh/Mario/: MarioCollision.cpp  MarioCollision.h  MarioController.cpp  MarioController.h  MarioManager.cpp  MarioManager.h  MarioRenderer.cpp  MarioRenderer.h  sm64_audio_stub.c
soh/soh/Network/: Network.cpp  Network.h  WebSocket.cpp  WebSocket.h
soh/soh/Notification/: Notification.cpp  Notification.h
soh/soh/ObjectExtension/: ActorListIndex.cpp  ActorListIndex.h  ActorMaximumHealth.cpp  ActorMaximumHealth.h  ObjectExtension.cpp  ObjectExtension.h
soh/soh/SohGui/: ImGuiUtils.cpp  ImGuiUtils.h  Menu.cpp  Menu.h  MenuTypes.h  ResolutionEditor.cpp  SohGui.cpp  SohGui.hpp  SohMenu.cpp  SohMenu.h  SohMenuDevTools.cpp  SohMenuEnhancements.cpp  SohMenuNetwork.cpp  SohMenuRandomizer.cpp  SohMenuSettings.cpp  SohModals.cpp  SohModals.h  UIWidgets.cpp  UIWidgets.hpp
soh/soh/config/: ConfigUpdaters.cpp  ConfigUpdaters.h
soh/soh/web/: shell.html  web_main.cpp  web_main.h
soh/src/boot/: build.c
soh/src/buffers/: heaps.c
soh/src/code/: __osMalloc.c  audio_heap.c  audio_init_params.c  audio_load.c  audio_playback.c  audio_seqplayer.c  audio_synthesis.c  code_800A9F30.c  code_800E4FE0.c  code_800EC960.c  graph.c  main.c  padmgr.c  sys_cfb.c  sys_ucode.c  z_actor.c  z_bgcheck.c  z_construct.c  z_demo.c  z_draw.c  z_en_item00.c  z_game_over.c  z_inventory.c  z_kankyo.c  z_lifemeter.c  z_message_PAL.c  z_onepointdemo.c  z_parameter.c  z_play.c  z_player_lib.c  z_rcp.c  z_room.c  z_scene_table.c  z_skelanime.c  z_sram.c  z_vr_box.c
(+957 files in other folders)
